[gd_scene load_steps=27 format=3 uid="uid://blumln7ifl2ds"]

[ext_resource type="FontFile" uid="uid://d1q5ckqvb8bl1" path="res://Fonts/Blackcraft.ttf" id="1_clwfd"]
[ext_resource type="Shader" uid="uid://daynhduw5ebwe" path="res://Blur.gdshader" id="1_vgwtt"]
[ext_resource type="FontFile" uid="uid://53tcmcxxidij" path="res://Fonts/Fiendish.ttf" id="2_bk8pb"]
[ext_resource type="Script" uid="uid://2sfvo0a42shb" path="res://pause_menu.gd" id="2_m122e"]
[ext_resource type="FontFile" uid="uid://yh5ct4i6wjaw" path="res://Fonts/Zombified.ttf" id="5_ofoaa"]
[ext_resource type="AudioStream" uid="uid://8txvx8rgp2tk" path="res://Resources/Audio/SFX/Menu/Click.ogg" id="6_quf6t"]
[ext_resource type="AudioStream" uid="uid://dcbm2rouun1e1" path="res://Resources/Audio/SFX/Menu/Hover.ogg" id="7_xpusj"]
[ext_resource type="AudioStream" uid="uid://ckvmn1oi4eyp4" path="res://Resources/Audio/SFX/Menu/HoverReverse.ogg" id="8_ia5p6"]
[ext_resource type="AudioStream" uid="uid://cd4ki1j3px0d7" path="res://Resources/Audio/BGMs/GameMusic_ForestTheme_24.mp3" id="9_17q2k"]
[ext_resource type="FontFile" uid="uid://b88f15c8osw0s" path="res://Fonts/HellsCemetery-Regular.ttf" id="10_hmcer"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4lgd6"]
shader = ExtResource("1_vgwtt")
shader_parameter/blur = 0.0
shader_parameter/brightness = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lvi7j"]
bg_color = Color(0.235294, 0.239216, 0.215686, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.235294, 0.239216, 0.215686, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.196078)
shadow_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_tlarn"]
line_spacing = 5.0
font = ExtResource("1_clwfd")
font_size = 75
font_color = Color(0.92549, 0.87451, 0.8, 1)
outline_size = 5
outline_color = Color(0.0941176, 0.109804, 0.0784314, 1)
shadow_color = Color(0.0941176, 0.109804, 0.0784314, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ivoau"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhdjy"]
bg_color = Color(0.92549, 0.87451, 0.8, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0941176, 0.109804, 0.0784314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sqiyo"]
bg_color = Color(0.313726, 0.352941, 0.313726, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0941176, 0.109804, 0.0784314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_njcn5"]
bg_color = Color(0.313726, 0.352941, 0.313726, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0941176, 0.109804, 0.0784314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="InputEventAction" id="InputEventAction_lyt42"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_bmpeg"]
events = [SubResource("InputEventAction_lyt42")]

[sub_resource type="InputEventAction" id="InputEventAction_kj8kx"]
action = &"Pause"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_k2645"]
events = [SubResource("InputEventAction_kj8kx")]

[sub_resource type="LabelSettings" id="LabelSettings_7usue"]
line_spacing = 5.0
font = ExtResource("5_ofoaa")

[sub_resource type="Animation" id="Animation_qdpmu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yq3so"]
resource_name = "pause_game"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.0, 2.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [1.0, 0.7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_k6yfx"]
resource_name = "resume_game"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hhg54"]
_data = {
&"RESET": SubResource("Animation_qdpmu"),
&"pause_game": SubResource("Animation_yq3so"),
&"resume_game": SubResource("Animation_k6yfx")
}

[node name="PauseMenu" type="ColorRect"]
process_mode = 3
material = SubResource("ShaderMaterial_4lgd6")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_m122e")
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lvi7j")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Pause Menu
"
label_settings = SubResource("LabelSettings_tlarn")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.235294, 0.239216, 0.215686, 1)
theme_override_colors/font_pressed_color = Color(0.92549, 0.87451, 0.8, 1)
theme_override_colors/font_color = Color(0.92549, 0.87451, 0.8, 1)
theme_override_colors/font_outline_color = Color(0.0941176, 0.109804, 0.0784314, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_bk8pb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ivoau")
theme_override_styles/hover = SubResource("StyleBoxFlat_hhdjy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sqiyo")
theme_override_styles/normal = SubResource("StyleBoxFlat_njcn5")
shortcut = SubResource("Shortcut_bmpeg")
shortcut_feedback = false
text = "Resume
"

[node name="RestartButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.235294, 0.239216, 0.215686, 1)
theme_override_colors/font_pressed_color = Color(0.92549, 0.87451, 0.8, 1)
theme_override_colors/font_color = Color(0.92549, 0.87451, 0.8, 1)
theme_override_colors/font_outline_color = Color(0.0941176, 0.109804, 0.0784314, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_bk8pb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ivoau")
theme_override_styles/hover = SubResource("StyleBoxFlat_hhdjy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sqiyo")
theme_override_styles/normal = SubResource("StyleBoxFlat_njcn5")
shortcut = SubResource("Shortcut_k2645")
text = "Restart"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.235294, 0.239216, 0.215686, 1)
theme_override_colors/font_pressed_color = Color(0.92549, 0.87451, 0.8, 1)
theme_override_colors/font_color = Color(0.92549, 0.87451, 0.8, 1)
theme_override_colors/font_outline_color = Color(0.0941176, 0.109804, 0.0784314, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_bk8pb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ivoau")
theme_override_styles/hover = SubResource("StyleBoxFlat_hhdjy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sqiyo")
theme_override_styles/normal = SubResource("StyleBoxFlat_njcn5")
text = "Quit Game
"

[node name="Quote" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Come back here pesky human!
AARRGGHHH!!"
label_settings = SubResource("LabelSettings_7usue")
horizontal_alignment = 1
vertical_alignment = 2
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hhg54")
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_quf6t")
volume_db = -10.0
bus = &"SFX"

[node name="HoverOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_xpusj")
volume_db = -10.0
bus = &"SFX"

[node name="HoverOut" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ia5p6")
volume_db = -10.0
bus = &"SFX"

[node name="PauseMenuBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_17q2k")
volume_db = -10.0
mix_target = 1
bus = &"BGM"

[node name="Credit" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.177
anchor_top = 0.869
anchor_right = 0.366
anchor_bottom = 0.982
offset_left = 0.559998
offset_top = 0.320007
offset_right = 0.519958
offset_bottom = -0.0400391
grow_horizontal = 2
theme_override_colors/font_color = Color(0.92549, 0.87451, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0.117647, 0.12549, 0.117647, 1)
theme_override_colors/font_outline_color = Color(0.235294, 0.239216, 0.215686, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("10_hmcer")
theme_override_font_sizes/font_size = 60
text = "By : Prathamesh_J"
horizontal_alignment = 2
vertical_alignment = 2
uppercase = true

[connection signal="mouse_entered" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_mouse_exited"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_mouse_exited"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
